Fixed carousel on mobile screen.

--- a/public/css/TenantStyle.css
+++ b/public/css/TenantStyle.css
@@ -439,6 +439,8 @@ body {
     }
 
     .swiper-slide{
-        width: 200px;
+        width: 100%;
+        height: 400px;
+        padding: 12px !important;
     }
 }
